kubernetes-networks/canary/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      name: web-canary
      labels:
        app: web-canary
    spec:
      containers:
        - name: web-canary
          image: tippman/kubernetes-intro
          livenessProbe:
            tcpSocket:
              port: 8000
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: { }
