kubernetes-networks/canary/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-canary-svc
spec:
  selector:
    app: web-canary
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
